kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: games
  labels:
    name: games
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: games
  labels:  
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 0.0.4

spec:
  selector:
    matchLabels:    
      app.kubernetes.io/name: api
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: games
  
  template:
    metadata:  
      labels:  
        app.kubernetes.io/name: api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: games
  
    spec:
  
      containers:
      - name: api
  
        image: localhost:32000/games/api:0.0.4
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
  
          limits:
            cpu: 1
            memory: 200Mi

        volumeMounts:
        - name: database-secret
          mountPath: /var/run/secrets/database-secret
          readOnly: true
        - name: igdb-secret
          mountPath: /var/run/secrets/igdb-secret
          readOnly: true
  
      restartPolicy: Always
      volumes:
      - name: database-secret
        secret:
          secretName: database-secret
      - name: igdb-secret
        secret:
          secretName: igdb-secret
  
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: games
  labels:  
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 0.0.4
spec:
  selector:  
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: games
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: games
  labels:  
    app.kubernetes.io/name: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 0.0.6

spec:
  selector:
    matchLabels:    
      app.kubernetes.io/name: ui
      app.kubernetes.io/component: ui
      app.kubernetes.io/part-of: games
  
  template:
    metadata:  
      labels:  
        app.kubernetes.io/name: ui
        app.kubernetes.io/component: ui
        app.kubernetes.io/part-of: games
  
    spec:
  
      containers:
      - name: ui
  
        image: localhost:32000/games/ui:0.0.6
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
  
        resources:
          requests:
            cpu: 50m
            memory: 25Mi
  
          limits:
            cpu: 1
            memory: 100Mi
  
      restartPolicy: Always

      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: games
  labels:  
    app.kubernetes.io/name: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 0.0.6
spec:
  selector:  
    app.kubernetes.io/name: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: games
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: games
  labels:  
    app.kubernetes.io/name: database
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 15.2-alpine3.17

spec:
  selector:
    matchLabels:    
      app.kubernetes.io/name: database
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: games
  
  template:
    metadata:  
      labels:  
        app.kubernetes.io/name: database
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: games
  
    spec:
      nodeSelector:
        games-storage: "true"
  
      containers:
      - name: database
  
        image: postgres:15.2-alpine3.17
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
  
          limits:
            cpu: 1
            memory: 200Mi
        readinessProbe:
          tcpSocket:
            port: postgres
          initialDelaySeconds: 25
        
        livenessProbe:
          tcpSocket:
            port: postgres
          initialDelaySeconds: 50
        volumeMounts:
        - name: database-data
          mountPath: /var/lib/postgresql/data/pgdata
        - name: database-secret
          mountPath: /var/run/secrets/database-secret
          readOnly: true
  
      restartPolicy: Always
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-volume-claim
      - name: database-secret
        secret:
          secretName: database-secret
  
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: games
  labels:  
    app.kubernetes.io/name: database
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 15.2-alpine3.17
spec:
  selector:  
    app.kubernetes.io/name: database
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: games
  type: ClusterIP
  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: postgres
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games-ingress
  namespace: games
  labels:  
    app.kubernetes.io/name: ingress
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: games
    app.kubernetes.io/version: 0.0.1
spec:
  ingressClassName: public
  tls:
  - hosts:
    - <YOUR_HOST>
    secretName: games-cert
  rules:
  - host: <YOUR_HOST>
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
